--- a/index.html
+++ b/index.html
@@ -1,96 +1,163 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Página de Luis</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Página de Luis</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-        body {
-            font-family: 'Segoe UI', sans-serif;
-            background: linear-gradient(120deg, #2c3e50, #3498db);
-            padding: 20px;
-            color: #333;
-        }
+<style>
+/* ===== FONDO Y ESTRELLAS ===== */
+body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: linear-gradient(180deg, #0f2027, #203a43, #2c5364);
+    overflow-x: hidden;
+}
 
-        h1 {
-            text-align: center;
-            color: white;
-        }
+.estrellas {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
 
-        .contenedor {
-            max-width: 700px;
-            margin: auto;
-            background: white;
-            padding: 25px;
-            border-radius: 12px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-        }
+.estrella {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: white;
+    animation: caer linear infinite;
+    opacity: 0.8;
+}
 
-        label {
-            font-weight: bold;
-        }
+@keyframes caer {
+    from {
+        transform: translateY(-10px);
+    }
+    to {
+        transform: translateY(110vh);
+    }
+}
 
-        input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0 15px;
-            border-radius: 6px;
-            border: 1px solid #ccc;
-        }
+/* ===== CONTENEDOR ===== */
+h1 {
+    text-align: center;
+    color: white;
+    margin-top: 20px;
+    letter-spacing: 2px;
+}
 
-        button {
-            width: 100%;
-            padding: 12px;
-            background: #27ae60;
-            color: white;
-            border: none;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 6px;
-            margin-top: 5px;
-        }
+.contenedor {
+    max-width: 750px;
+    margin: 30px auto;
+    background: rgba(255,255,255,0.95);
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+    animation: aparecer 1s ease;
+}
 
-        button:hover {
-            background: #219150;
-        }
+@keyframes aparecer {
+    from { opacity: 0; transform: translateY(30px); }
+    to { opacity: 1; transform: translateY(0); }
+}
 
-        .word {
-            background: #2980b9;
-        }
+/* ===== FORMULARIO ===== */
+label {
+    font-weight: bold;
+}
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
+input {
+    width: 100%;
+    padding: 12px;
+    margin: 10px 0 20px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 15px;
+}
 
-        th, td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: center;
-        }
+input:focus {
+    outline: none;
+    border-color: #3498db;
+}
 
-        th {
-            background: #2c3e50;
-            color: white;
-        }
-    </style>
+/* ===== BOTONES ===== */
+.botones {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+}
+
+button {
+    padding: 14px;
+    border: none;
+    font-size: 16px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+button:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 8px 15px rgba(0,0,0,0.3);
+}
+
+.agregar {
+    background: #27ae60;
+    color: white;
+}
+
+.word {
+    background: #2980b9;
+    color: white;
+}
+
+/* ===== TABLA ===== */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 25px;
+}
+
+th, td {
+    padding: 12px;
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+}
+
+th {
+    background: #2c3e50;
+    color: white;
+}
+
+tbody tr:hover {
+    background: #f2f6f8;
+    transition: 0.3s;
+}
+</style>
 </head>
 <body>
+
+<!-- ESTRELLAS -->
+<div class="estrellas" id="estrellas"></div>
 
 <h1>Página de Luis</h1>
 
 <div class="contenedor">
 
     <label>Monto base ($ COP)</label>
-    <input type="number" id="monto" placeholder="Ej: 1200000">
+    <input type="number" id="monto" placeholder="Ej: 1500000">
 
     <label>IVA (%)</label>
     <input type="number" id="iva" value="19">
 
-    <button onclick="agregarCuenta()">Agregar cuenta</button>
-    <button class="word" onclick="descargarWord()">Descargar en Word</button>
+    <div class="botones">
+        <button class="agregar" onclick="agregarCuenta()">Agregar cuenta</button>
+        <button class="word" onclick="descargarWord()">Descargar Word</button>
+    </div>
 
     <table id="tablaCompleta">
         <thead>
@@ -100,57 +167,71 @@
                 <th>Total</th>
             </tr>
         </thead>
-        <tbody id="tabla">
-        </tbody>
+        <tbody id="tabla"></tbody>
     </table>
 
 </div>
 
 <script>
-    function formatoColombiano(numero) {
-        return numero.toLocaleString('es-CO');
+/* ===== FORMATO COLOMBIANO ===== */
+function formatoCOP(num) {
+    return num.toLocaleString('es-CO');
+}
+
+/* ===== AGREGAR CUENTA ===== */
+function agregarCuenta() {
+    const monto = parseFloat(document.getElementById("monto").value);
+    const ivaPorcentaje = parseFloat(document.getElementById("iva").value);
+
+    if (isNaN(monto) || isNaN(ivaPorcentaje)) {
+        alert("Ingresa valores válidos");
+        return;
     }
 
-    function agregarCuenta() {
-        const monto = parseFloat(document.getElementById("monto").value);
-        const ivaPorcentaje = parseFloat(document.getElementById("iva").value);
+    const iva = monto * (ivaPorcentaje / 100);
+    const total = monto + iva;
 
-        if (isNaN(monto) || isNaN(ivaPorcentaje)) {
-            alert("Ingresa valores válidos");
-            return;
-        }
+    const fila = `
+        <tr>
+            <td>$ ${formatoCOP(monto)}</td>
+            <td>$ ${formatoCOP(iva)}</td>
+            <td>$ ${formatoCOP(total)}</td>
+        </tr>
+    `;
 
-        const iva = monto * (ivaPorcentaje / 100);
-        const total = monto + iva;
+    document.getElementById("tabla").innerHTML += fila;
+    document.getElementById("monto").value = "";
+}
 
-        const fila = `
-            <tr>
-                <td>$ ${formatoColombiano(monto)}</td>
-                <td>$ ${formatoColombiano(iva)}</td>
-                <td>$ ${formatoColombiano(total)}</td>
-            </tr>
-        `;
+/* ===== DESCARGAR WORD ===== */
+function descargarWord() {
+    const contenido = `
+        <h2>Página de Luis</h2>
+        <p>Resumen de cuentas con IVA - Colombia</p>
+        ${document.getElementById("tablaCompleta").outerHTML}
+    `;
 
-        document.getElementById("tabla").innerHTML += fila;
-        document.getElementById("monto").value = "";
-    }
+    const blob = new Blob(['<html><body>' + contenido + '</body></html>'], {
+        type: 'application/msword'
+    });
 
-    function descargarWord() {
-        const contenido = `
-            <h2>Página de Luis</h2>
-            <p>Resumen de cuentas con IVA</p>
-            ${document.getElementById("tablaCompleta").outerHTML}
-        `;
+    const link = document.createElement('a');
+    link.href = URL.createObjectURL(blob);
+    link.download = 'Pagina_de_Luis.doc';
+    link.click();
+}
 
-        const blob = new Blob(['<html><body>' + contenido + '</body></html>'], {
-            type: 'application/msword'
-        });
+/* ===== GENERAR ESTRELLAS ===== */
+const contenedor = document.getElementById("estrellas");
 
-        const link = document.createElement('a');
-        link.href = URL.createObjectURL(blob);
-        link.download = 'Pagina_de_Luis.doc';
-        link.click();
-    }
+for (let i = 0; i < 60; i++) {
+    const estrella = document.createElement("div");
+    estrella.className = "estrella";
+    estrella.style.left = Math.random() * 100 + "vw";
+    estrella.style.animationDuration = (3 + Math.random() * 5) + "s";
+    estrella.style.opacity = Math.random();
+    contenedor.appendChild(estrella);
+}
 </script>
 
 </body>
