--- a/index.html
+++ b/index.html
@@ -6,62 +6,77 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+/* ===== FONDO ===== */
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
     background: linear-gradient(180deg, #0f2027, #203a43, #2c5364);
     color: #333;
+    overflow-x: hidden;
 }
 
+/* ===== ESTRELLAS ===== */
+.estrellas {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+.estrella {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: white;
+    opacity: 0.8;
+    animation: caer linear infinite;
+}
+@keyframes caer {
+    from { transform: translateY(-10px); }
+    to { transform: translateY(110vh); }
+}
+
+/* ===== TITULO ===== */
 h1 {
     text-align: center;
     color: white;
-    margin: 20px 0;
+    margin: 20px;
 }
 
 /* ===== DASHBOARD ===== */
 .dashboard {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
-    gap: 15px;
-    max-width: 900px;
+    max-width: 1000px;
     margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+    gap: 15px;
 }
-
 .card {
     background: white;
     padding: 20px;
-    border-radius: 12px;
+    border-radius: 15px;
     text-align: center;
     box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    animation: aparecer 1s ease;
 }
+.card h3 { margin: 0; font-size: 14px; color: #555; }
+.card p { font-size: 22px; font-weight: bold; margin-top: 10px; }
 
-.card h3 {
-    margin: 0;
-    font-size: 14px;
-    color: #555;
-}
-
-.card p {
-    margin: 10px 0 0;
-    font-size: 22px;
-    font-weight: bold;
+@keyframes aparecer {
+    from { opacity: 0; transform: translateY(30px); }
+    to { opacity: 1; transform: translateY(0); }
 }
 
 /* ===== CONTENEDOR ===== */
 .contenedor {
-    max-width: 900px;
+    max-width: 1000px;
     margin: 30px auto;
     background: white;
     padding: 30px;
-    border-radius: 15px;
+    border-radius: 20px;
 }
 
 /* ===== FORM ===== */
-label {
-    font-weight: bold;
-}
-
+label { font-weight: bold; }
 input, select {
     width: 100%;
     padding: 12px;
@@ -70,29 +85,21 @@ input, select {
     border: 1px solid #ccc;
 }
 
+/* ===== BOTONES ===== */
 .botones {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 15px;
 }
-
 button {
     padding: 14px;
     border: none;
-    font-size: 16px;
     border-radius: 8px;
     cursor: pointer;
+    font-size: 15px;
 }
-
-.agregar {
-    background: #27ae60;
-    color: white;
-}
-
-.excel {
-    background: #16a085;
-    color: white;
-}
+.agregar { background: #27ae60; color: white; }
+.excel { background: #16a085; color: white; }
 
 /* ===== TABLA ===== */
 table {
@@ -100,24 +107,31 @@ table {
     border-collapse: collapse;
     margin-top: 25px;
 }
-
 th, td {
     padding: 12px;
     border-bottom: 1px solid #ddd;
     text-align: center;
 }
-
 th {
     background: #2c3e50;
     color: white;
 }
+.acciones button {
+    padding: 6px 10px;
+    margin: 0 3px;
+    border-radius: 5px;
+}
+.editar { background: #f39c12; color: white; }
+.borrar { background: #e74c3c; color: white; }
 </style>
 </head>
+
 <body>
+
+<div class="estrellas" id="estrellas"></div>
 
 <h1>Página de Luis</h1>
 
-<!-- DASHBOARD -->
 <div class="dashboard">
     <div class="card">
         <h3>Total Base</h3>
@@ -137,26 +151,27 @@ th {
 
     <label>Tipo</label>
     <select id="tipo">
-        <option value="material">Materiales (19%)</option>
+        <option value="material">Material (19%)</option>
         <option value="mano">Mano de obra (0%)</option>
-        <option value="servicio">Servicios (19%)</option>
+        <option value="servicio">Servicio (19%)</option>
     </select>
 
     <label>Monto base ($ COP)</label>
-    <input type="number" id="monto" placeholder="Ej: 1200000">
+    <input type="number" id="monto">
 
     <div class="botones">
-        <button class="agregar" onclick="agregarCuenta()">Agregar</button>
+        <button class="agregar" onclick="agregar()">Agregar</button>
         <button class="excel" onclick="exportarExcel()">Exportar Excel</button>
     </div>
 
-    <table id="tablaCompleta">
+    <table>
         <thead>
             <tr>
                 <th>Tipo</th>
                 <th>Base</th>
                 <th>IVA</th>
                 <th>Total</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody id="tabla"></tbody>
@@ -165,52 +180,100 @@ th {
 </div>
 
 <script>
-let totalBase = 0;
-let totalIVA = 0;
-let totalGeneral = 0;
+let datos = JSON.parse(localStorage.getItem("cuentasLuis")) || [];
 
-function formato(num) {
-    return num.toLocaleString('es-CO');
+/* FORMATO */
+function f(n){ return n.toLocaleString('es-CO'); }
+
+/* GUARDAR */
+function guardar(){
+    localStorage.setItem("cuentasLuis", JSON.stringify(datos));
+    recalcular();
 }
 
-function agregarCuenta() {
-    const tipo = document.getElementById("tipo").value;
-    const monto = parseFloat(document.getElementById("monto").value);
+/* RECALCULAR */
+function recalcular(){
+    let b=0,i=0,t=0;
+    datos.forEach(d=>{
+        b+=d.base; i+=d.iva; t+=d.total;
+    });
+    totalBase.innerText="$ "+f(b);
+    totalIVA.innerText="$ "+f(i);
+    totalGeneral.innerText="$ "+f(t);
+    render();
+}
 
-    if (isNaN(monto)) return alert("Ingresa un monto válido");
-
-    let ivaPorcentaje = (tipo === "mano") ? 0 : 19;
-    let iva = monto * ivaPorcentaje / 100;
-    let total = monto + iva;
-
-    totalBase += monto;
-    totalIVA += iva;
-    totalGeneral += total;
-
-    document.getElementById("tabla").innerHTML += `
+/* RENDER */
+function render(){
+    tabla.innerHTML="";
+    datos.forEach((d,idx)=>{
+        tabla.innerHTML+=`
         <tr>
-            <td>${tipo}</td>
-            <td>$ ${formato(monto)}</td>
-            <td>$ ${formato(iva)}</td>
-            <td>$ ${formato(total)}</td>
-        </tr>
-    `;
-
-    document.getElementById("totalBase").innerText = "$ " + formato(totalBase);
-    document.getElementById("totalIVA").innerText = "$ " + formato(totalIVA);
-    document.getElementById("totalGeneral").innerText = "$ " + formato(totalGeneral);
-
-    document.getElementById("monto").value = "";
+            <td>${d.tipo}</td>
+            <td>$ ${f(d.base)}</td>
+            <td>$ ${f(d.iva)}</td>
+            <td>$ ${f(d.total)}</td>
+            <td class="acciones">
+                <button class="editar" onclick="editar(${idx})">✏️</button>
+                <button class="borrar" onclick="borrar(${idx})">❌</button>
+            </td>
+        </tr>`;
+    });
 }
 
-function exportarExcel() {
-    let tabla = document.getElementById("tablaCompleta").outerHTML;
-    let blob = new Blob([tabla], { type: 'application/vnd.ms-excel' });
-    let link = document.createElement("a");
-    link.href = URL.createObjectURL(blob);
-    link.download = "Pagina_de_Luis.xls";
-    link.click();
+/* AGREGAR */
+function agregar(){
+    let tipo=tipoEl.value;
+    let base=+monto.value;
+    if(!base) return;
+
+    let ivaP=(tipo==="mano")?0:19;
+    let iva=base*ivaP/100;
+    let total=base+iva;
+
+    datos.push({tipo,base,iva,total});
+    guardar();
+    monto.value="";
 }
+
+/* BORRAR */
+function borrar(i){
+    datos.splice(i,1);
+    guardar();
+}
+
+/* EDITAR */
+function editar(i){
+    let nuevo=prompt("Nuevo monto:", datos[i].base);
+    if(!nuevo) return;
+    datos[i].base=+nuevo;
+    let ivaP=(datos[i].tipo==="mano")?0:19;
+    datos[i].iva=datos[i].base*ivaP/100;
+    datos[i].total=datos[i].base+datos[i].iva;
+    guardar();
+}
+
+/* EXCEL */
+function exportarExcel(){
+    let html=document.querySelector("table").outerHTML;
+    let blob=new Blob([html],{type:'application/vnd.ms-excel'});
+    let a=document.createElement("a");
+    a.href=URL.createObjectURL(blob);
+    a.download="Pagina_de_Luis.xls";
+    a.click();
+}
+
+/* ESTRELLAS */
+for(let i=0;i<70;i++){
+    let s=document.createElement("div");
+    s.className="estrella";
+    s.style.left=Math.random()*100+"vw";
+    s.style.animationDuration=(3+Math.random()*5)+"s";
+    estrellas.appendChild(s);
+}
+
+/* INIT */
+recalcular();
 </script>
 
 </body>
